--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -21,6 +21,7 @@
     <link rel="import" href="/sys/paper-checkbox/paper-checkbox.html">
     <link rel="import" href="/sys/paper-input/paper-textarea.html">
     <link rel="import" href="/sys/paper-input/paper-input.html">
+    <link rel="import" href="/sys/paper-toolbar/paper-toolbar.html">
     <link rel="import" href="/sys/paper-button/paper-button.html">
     <link rel="import" href="/sys/paper-radio-group/paper-radio-group.html">
     <link rel="import" href="/sys/paper-radio-button/paper-radio-button.html">
