--- a/src/Launcher/wwwroot/Launcher/viewmodels/configs.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/configs.html
@@ -35,7 +35,7 @@
   <template is="dom-bind">
     <div class="vertical">
 
-      <div id="settings_header">App Settings</div>
+      <div id="settings_header">Server configurations</div>
       <div id="settings_content">
         <template is="dom-repeat" items="{{_getItems(model.Menu)}}" sort="_sortAlphabetic">
           <a href$="{{item.Url}}" id="item">
