--- a/src/Launcher/wwwroot/Launcher/elements/co-layout/co-layout-multiview.html
+++ b/src/Launcher/wwwroot/Launcher/elements/co-layout/co-layout-multiview.html
@@ -6,7 +6,8 @@
     }
 
     .view.hidden {
-      visibility: collapse;
+      /* Why? visibility: collapse; */
+      display: none;
     }
   </style>
   <template>
