--- a/src/Launcher/wwwroot/Launcher/viewmodels/configs.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/configs.html
@@ -12,6 +12,7 @@
       padding-left: 20px;
       font-size: 24px;
       font-weight: bold;
+      box-sizing: border-box;
       color: #999;
       top: 0px;
       left: 0px;
