--- a/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad.html
@@ -61,6 +61,7 @@
             {
               position: absolute;
               display: flex;
+              box-sizing: border-box;
               align-items: center;
               padding-left: 20px;
               font-size: 24px;
