--- a/src/Launcher/wwwroot/Launcher/viewmodels/Settings.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/Settings.html
@@ -8,6 +8,7 @@
     {
       position: absolute;
       display: flex;
+      box-sizing: border-box;
       align-items: center;
       padding-left: 20px;
       font-size: 24px;
