--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -52,6 +52,7 @@
     <link rel="import" href="/sys/starcounter-include/starcounter-include.html" />
     <link rel="import" href="/Launcher/elements/co-layout/co-layout-panels.html" />
     <link rel="import" href="/Launcher/elements/co-layout/co-layout-multiview.html" />
+    <link rel="import" href="/Launcher/elements/co-layout/co-title.html" />
     <!-- Disable untill migrated to Polymer1 <link rel="import" href="/sys/console-log/console-log.html" /> -->
 
     <!-- Import other elements used in this document -->
@@ -156,6 +157,7 @@
         <span id="co-splash-spinner">⚇</span>
     </div>
     <template id="root-launcher-dom-bind" is="dom-bind">
+      <co-title value="[[model.Title]]"></co-title>
       <co-layout-panels only-workspace="[[!model.signedIn]]">
         <div topbar class="launcher-toolbar launcher-topbar">
             <div style="">
