--- a/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad2.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-launchpad/launcher-launchpad2.html
@@ -10,6 +10,8 @@
                 min-height: 1em;
             }
 
+              --launchpadiconsize: 12px;
+
             .launchpad-tile a {
                 text-align: center;
                 min-width: 80px;
@@ -22,14 +24,15 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                min-width: 64px;
-                min-height: 64px;
+                min-width: 32px;
+                min-height: 32px;
             }
+
 
             .launchpad-tile .launchpad-icon img,
             .launchpad-tile .launchpad-icon svg {
-                width: 64px;
-                height: 64px;
+                width: 32px;
+                height: 32px;
             }
 
             .launchpad-tile:hover .launchpad-icon {
