--- a/src/Launcher/wwwroot/Launcher/elements/co-layout/co-layout-multiview.html
+++ b/src/Launcher/wwwroot/Launcher/elements/co-layout/co-layout-multiview.html
@@ -12,7 +12,7 @@
   </style>
   <template>
     <template is="dom-repeat" items="{{apps}}" as="item">
-      <div class$="view {{_class(item.active)}}">
+      <div class$="view {{_class(item.active)}}" on-attached="partialAttached">
         <template is="imported-template" model="{{item.data.Current}}" content$="{{item.data.Current.Html}}"></template>
       </div>
     </template>
@@ -37,7 +37,13 @@
           value: 200,
           notify: true,
           observer: 'panelWidthChanged'
-        }
+        },
+        empty: {
+          type: Boolean,
+          value: true,
+          notify: true,
+          observer: 'emptyChanged'
+        },
       },
       observers:[
         'subdataChanged(data.*)',
@@ -46,7 +52,13 @@
       },
       attached: function() {
       },
+      partialAttached: function() {
+        this.updateChildPanelWidth();
+      },
       panelWidthChanged: function() {
+        this.updateChildPanelWidth();
+      },
+      updateChildPanelWidth: function() {
         var views = Polymer.dom(this.root).querySelectorAll('.view');
         for (var i = 0; i < views.length; i++) {
           var view = views[i];
@@ -85,8 +97,8 @@
         this.apps = [];
         for (var name in this.data)
         {
-          if (this.data.hasOwnProperty(name) &&
-            this.data[name].hasOwnProperty("Active$")) {
+          if (this.data.hasOwnProperty(name) && this.data[name].hasOwnProperty("Active$")) {
+            this.empty = false;
             var app = {
               name: name,
               active: false,
@@ -132,6 +144,10 @@
         } else {
           this.fire("panel-command", { status: "close"});
         }
+      },
+      emptyChanged: function(empty) {
+        if (!empty)
+          this.fire("panel-command", { status: "content_exist"});
       },
       deActivateAll() {
         this._activeApp = "none";
