--- a/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-search/launcher-search.html
@@ -7,8 +7,7 @@
     <style>
         :host {
             display: inline;
-            height: 0px;
-            width: 0px;
+            min-width: 190px;
         }
 
         input {
