--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -150,6 +150,11 @@
         overflow: auto;
         flex:1;
       }
+
+      launcher-search {
+        margin-left: 10px;
+      }
+      
     </style>
 </head>
 <body is="launcher-main" class="loading">
