--- a/src/Launcher/wwwroot/Launcher/viewmodels/dashboard.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/dashboard.html
@@ -34,7 +34,7 @@
     <div class="hero-unit" id="hu">
 
         <div class="dashboard-shadows" style="text-align:center;margin:50px;font-size:1.25em;">
-          <h1>Hello there {{model.FullName}}</h1>
+          <h1>Hello, {{model.FirstName}}</h1>
         </div>
         <div>
           <starcounter-include partial="{{model.DashboardPartials}}" style="width: 80%; margin: 0 auto;"></starcounter-include>
