--- a/src/Launcher/wwwroot/Launcher/viewmodels/dashboard.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/dashboard.html
@@ -39,6 +39,13 @@
         <div>
           <starcounter-include partial="{{model.DashboardPartials}}" style="width: 80%; margin: 0 auto;"></starcounter-include>
         </div>
+        <div style="padding-top: 50px;display:flex;justify-content:center;">
+
+          <div style="width:40%;background-color:rgba(255,255,255,.75);border-radius:5px;opacity:.9;padding:20px;">
+            <iframe id="forecast_embed" type="text/html" frameborder="0" height="245" width="100%" src="http://forecast.io/embed/#lat=59.3260668&lon=17.8474649&name=Stockholm&color=#000000&font=Lato&units=uk"> </iframe>
+          </div>
+
+        </div>
         <div style="position:absolute;bottom:0px;left:0px;right:0px;background:rgba(0,0,0,.2)">
           <launcher-launchpad2 apps="{{model.LaunchpadPartials}}"></launcher-launchpad2>
         </div>
