Remove http: from uri so that it will load under https as well.

--- a/src/Launcher/wwwroot/Launcher/viewmodels/dashboard.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/dashboard.html
@@ -42,7 +42,7 @@
         <div style="padding-top: 50px;display:flex;justify-content:center;">
 
           <div style="width:40%;background-color:rgba(255,255,255,.75);border-radius:5px;opacity:.9;padding:20px;">
-            <iframe id="forecast_embed" type="text/html" frameborder="0" height="245" width="100%" src="http://forecast.io/embed/#lat=59.3260668&lon=17.8474649&name=Stockholm&color=#000000&font=Lato&units=uk"> </iframe>
+            <iframe id="forecast_embed" type="text/html" frameborder="0" height="245" width="100%" src="//forecast.io/embed/#lat=59.3260668&lon=17.8474649&name=Stockholm&color=#000000&font=Lato&units=uk"> </iframe>
           </div>
 
         </div>
